Add Category controller and view

--- a/Web/ScatResale.Web/Views/Home/Index.cshtml
+++ b/Web/ScatResale.Web/Views/Home/Index.cshtml
@@ -1,9 +1,80 @@
 ﻿@using ScatResale.Common
-@{
-    this.ViewData["Title"] = "Home Page";
-}
+@model IndexViewModel
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="hero-area">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-lg-12 text-center">
+                <div class="contents">
+                    <h2 class="head-title">Welcome to <span class="year">@GlobalConstants.SystemName</span></h2>
+                    <div class="search-bar">
+                        <fieldset>
+                            <form class="search-form">
+                                <div class="form-group tg-inputwithicon">
+                                    <i class="lni-tag"></i>
+                                    <input type="text" name="customword" class="form-control" placeholder="What are you looking for">
+                                </div>
+                                <div class="form-group tg-inputwithicon">
+                                    <i class="lni-map-marker"></i>
+                                    <div class="tg-select">
+                                        <select>
+                                            <option value="none">All Locations</option>
+                                            <option value="none">New York</option>
+                                            <option value="none">California</option>
+                                            <option value="none">Washington</option>
+                                            <option value="none">Birmingham</option>
+                                            <option value="none">Chicago</option>
+                                            <option value="none">Phoenix</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group tg-inputwithicon">
+                                    <i class="lni-layers"></i>
+                                    <div class="tg-select">
+                                        <select>
+                                            <option value="none">Select Categories</option>
+                                            <option value="none">Mobiles</option>
+                                            <option value="none">Electronics</option>
+                                            <option value="none">Training</option>
+                                            <option value="none">Real Estate</option>
+                                            <option value="none">Services</option>
+                                            <option value="none">Training</option>
+                                            <option value="none">Vehicles</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <button class="btn btn-common" type="button"><i class="lni-search"></i></button>
+                            </form>
+                        </fieldset>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<div>
+    <partial name="_CookieConsentPartial" />
+</div>
+
+<section class="trending-cat section-padding">
+    <div class="container">
+        <h1 class="section-title">Product Categories</h1>
+        <div class="row">
+            @foreach (var category in Model.Categories)
+            {
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="box">
+                        <div class="icon">
+                            <img class="img-fluid" src="@category.Icon" alt="">
+                        </div>
+                        <h4>@category.Name</h4>
+                        <strong>189 Ads</strong>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</section>
+
