--- a/Web/ScatResale.Web/Views/_ViewImports.cshtml
+++ b/Web/ScatResale.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using ScatResale.Web
 @using ScatResale.Web.ViewModels
+@using ScatResale.Web.ViewModels.Home
+@using ScatResale.Web.ViewModels.Categories
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, ScatResale.Web
